# Python.py

./: .gitignore  COUNT_occurance.py  Min_Max_Normalization.py  Pangram.py  Pprint.py  README.md  Welcome_pattern.py  Z-score_Normalization.py  animal_cracker.py  armstrong.py  binary.py  bitcoin_minning.py  black_jack.py  common_letters.py  count_lower.py  customegen.py  date.py  devide_andcoquer.py  dict.py  double_decor.py  double_thelist_map.py  even_odd_rec.py  evenoddlambda.py  namedTuple.py  pyproject.toml  requirements.txt  student_marks_min2.py
00__NUMPY__00/: Array indexing.ipynb  Array_Manipulation.ipynb  Creating arrays and datatypes.ipynb
10_Generators/: generator.py
11_Iterators/: RemoteControl.py
13_Thread Programming/: mainthread.py  producer_consumer.py  producer_consumer_waitandNotify.py
14_MultiProcessing/: multi_processing.py  multiprocessing_lock.py  multiprocessing_pool.py
15_UnitTesting/: CreditCardValidation.py  cap.py  mydb.py  test_CreditCardValidation.py  test_mathlib.py  test_mydb.py
1_Numbers/: AmicableNumber.py  Guessing_game.py  armstrong.py  cyclic_number.py  even_odd_rec.py  makes_twenty.py
2_Lists/: Pprint.py  SubarrayOfGivenSum.py  Z-score_Normalization.py  average.py  digits_to_number.py  inputfun.py  list_of_squaretuple.py  minDiffPair.py  overlapped.py  random_list.py  sort_bytuple.py  swap_characters.py  waterNjugs.py
3_Strings/: 2nd_occ.py  Anadrome.py  Anagram_strings.py  COUNT_occurance.py  common_letters.py  count_letters_rec.py  count_lower.py  encrypt.py  longest_str.py  maxOccurance.py  old_macdonals.py  (+2 more)
(+352 files in other folders)
